--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Tripster - отели в сети</title>
+    <title>Tripster - book a hotel online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
